--- a/index.html
+++ b/index.html
@@ -63,21 +63,11 @@
         .btn-red:hover { background-color: #b91c1c; transform: translateY(-1px); }
         .btn-blue { background-color: #3b82f6; color: white; }
         .btn-blue:hover { background-color: #2563eb; transform: translateY(-1px); }
-
-        /* Custom height class for the weather map to make it larger */
-        .weather-map-embed {
-            height: 300px; /* Default height for mobile/small desktop */
-        }
-        @media (min-width: 768px) {
-            .weather-map-embed {
-                height: 450px; /* Increased height for desktop view */
-            }
-        }
     </style>
 </head>
 <body class="bg-gradient-to-br from-gray-900 to-gray-800 text-white font-poppins min-h-screen">
     <div class="container mx-auto px-4 py-8 relative overflow-hidden">
-        <header class="text-center mb-12 relative z-10" data-aos="fade-down">
+            <header class="text-center mb-12 relative z-10" data-aos="fade-down">
             <div class="inline-block px-6 py-2 bg-gray-800 rounded-full border border-gray-700 mb-4">
                 <p class="text-sm text-yellow-300 flex items-center justify-center">
                     <span id="system-health" class="health-indicator health-green"></span>
@@ -161,7 +151,6 @@
         </div>
 
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 mb-6">
-            
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div class="sensor-card bg-gradient-to-br from-gray-800 to-gray-700 rounded-lg p-4 shadow-md" data-aos="fade-right">
                     <div class="flex items-center mb-3">
@@ -236,7 +225,7 @@
                 </div>
             </div>
 
-            <div class="flex flex-col gap-4">
+            <div class="grid grid-cols-1 gap-4">
                 <div class="live-stream bg-gradient-to-br from-gray-800 to-gray-700 rounded-lg p-4 shadow-md border border-gray-700" data-aos="fade-up">
                     <div class="flex items-center mb-3">
                         <div class="p-2 rounded-md bg-red-900/50 mr-3 backdrop-blur-sm">
@@ -255,28 +244,20 @@
                         <div class="p-2 rounded-md bg-sky-900/50 mr-3 backdrop-blur-sm">
                             <i data-feather="cloud-snow" class="text-sky-300"></i>
                         </div>
-                        <h3 class="text-lg font-semibold text-sky-200">Noosa Surf & Weather</h3>
+                        <h3 class="text-lg font-semibold text-sky-200">Noosa Surf & Tide Data</h3>
                     </div>
-                    
-                    <div class="aspect-w-16 aspect-h-9 bg-black rounded-md overflow-hidden border border-gray-700 relative weather-map-embed">
-                        <iframe src="https://www.windy.com/embed2.html?lat=-26.398&lon=153.111&zoom=10&level=surface&overlay=waves&menu=&message=&marker=&calendar=&pressure=&type=map&location=coordinates&detail=true&detailLat=-26.398&detailLon=153.111&metricw=m/s&metricu=m/s&metricv=kt&metrictemp=°C&metricsw=m&metricsh=m&metricp=hPa&restriction=true&scrollwheel=true" allowfullscreen class="w-full h-full"></iframe>
-                    </div>
-
-                    <div class="mt-4 pt-4 border-t border-gray-700">
-                        <h4 class="text-sm font-semibold text-gray-300 mb-2">Current Surf Conditions</h4>
-                        <div class="grid grid-cols-3 gap-2 text-center">
-                            <div class="bg-gray-700/50 p-2 rounded-lg">
-                                <p class="text-xs text-gray-400">Wave Height</p>
-                                <p id="wave-height" class="text-xl font-bold text-sky-400">1.2 m</p>
-                            </div>
-                            <div class="bg-gray-700/50 p-2 rounded-lg">
-                                <p class="text-xs text-gray-400">Wind Speed</p>
-                                <p id="wind-speed" class="text-xl font-bold text-sky-400">10 kn NE</p>
-                            </div>
-                            <div class="bg-gray-700/50 p-2 rounded-lg">
-                                <p class="text-xs text-gray-400">Next High Tide</p>
-                                <p id="next-tide" class="text-xl font-bold text-sky-400">11:35 AM</p>
-                            </div>
+                    <div class="grid grid-cols-3 gap-2 text-center">
+                        <div class="bg-gray-700/50 p-2 rounded-lg">
+                            <p class="text-xs text-gray-400">Wave Height</p>
+                            <p id="wave-height" class="text-xl font-bold text-sky-400">1.2 m</p>
+                        </div>
+                        <div class="bg-gray-700/50 p-2 rounded-lg">
+                            <p class="text-xs text-gray-400">Wind Speed</p>
+                            <p id="wind-speed" class="text-xl font-bold text-sky-400">10 kn NE</p>
+                        </div>
+                        <div class="bg-gray-700/50 p-2 rounded-lg">
+                            <p class="text-xs text-gray-400">Next High Tide</p>
+                            <p id="next-tide" class="text-xl font-bold text-sky-400">11:35 AM</p>
                         </div>
                     </div>
                 </div>
@@ -289,7 +270,7 @@
                     <p class="text-sm font-semibold text-white mb-2">System Operations</p>
                     <div class="grid grid-cols-2 gap-2">
                         <button id="toggleCooling" class="utility-btn btn-blue">
-                            <i data-feather="power" class="w-4 h-4 mr-2"></i> Cooling ON
+                            <i data-feather="power" class="w-4 h-4 mr-2"></i> Toggle Cooling
                         </button>
                         <button id="remoteReboot" class="utility-btn btn-red">
                             <i data-feather="alert-triangle" class="w-4 h-4 mr-2"></i> Remote Reboot
